# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,16 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import roomsRouter from "./rooms";
+import bookingsRouter from "./bookings";
+import paymentsRouter from "./payments";
+import adminRouter from "./admin";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(roomsRouter);
+router.use(bookingsRouter);
+router.use(paymentsRouter);
+router.use(adminRouter);
 
 export default router;
